Tracking another day of exports

--- a/03_jQuery-Test/AfricanVid.html
+++ b/03_jQuery-Test/AfricanVid.html
@@ -840,7 +840,7 @@ La tete dans les nuages: Teno investigates the ties between unaccountable govern
 </dl>
 <dl>
 <dt><b>Forbidden Land.</b></dt>
-<dd>Eritreans have been fighting for independence from Ethiopia for over 30 years. This video discusses the struggle for liberation which culminated in a successful coup in May, 1991. 1990. 56 min. Video/C 2617</dd>
+<dd>Eritreans have been fighting for independence from Ethiopia for over 30 years. This Video/Dusses the struggle for liberation which culminated in a successful coup in May, 1991. 1990. 56 min. Video/C 2617</dd>
 </dl>
 <dl>
 <dt><b>Hamar Trilogy.</b><br>
