--- a/03_jQuery-Test/Artvid.html
+++ b/03_jQuery-Test/Artvid.html
@@ -2017,7 +2017,7 @@ Contents: Edvard Munch : Ashes, National Gallery, Oslo / written by Marit Lange 
 </dl>
 <dl>
 <dt><b>The First Emperor of China.</b></dt>
-<dd>Offers close-up views of the magnificent burial complex of Qin Shi Huang Di, the third century BC ruler who unified China and built the Great Wall. An aerial flyby tour of the wall, original footage of the excavation's first days, a museum tour, and other 2,000 still-frame images of the 7,000 life-size terracotta warriors and horses that stand guard over the tomb are only a few of the features of this disc. c1991. 30 min. <b>Video Disc 22</b></dd>
+<dd>Offers close-up views of the magnificent burial complex of Qin Shi Huang Di, the third century BC ruler who unified China and built the Great Wall. An aerial flyby tour of the wall, original footage of the excavation's first days, a museum tour, and other 2,000 still-frame images of the 7,000 life-size terracotta warriors and horses that stand guard over the tomb are only a few of the features of this disc. c1991. 30 min. <b>Video/D 22</b></dd>
 </dl>
 <dl>
 <dt><b>Five Perspectives on Thai Art (Integrative arts of modern Thailand)</b></dt>
