--- a/03_jQuery-Test/CJKVid.html
+++ b/03_jQuery-Test/CJKVid.html
@@ -602,8 +602,9 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dd>â€¢149; Ѭ href="http://asianamericanmedia.org/rf_cms/index.php?cmd=showPage&page_id=1.4.1.2.77&section=1.4">Center for Asian American Media catalog descriptionЖ</dd>
 <dd>â€¢149; Ѭ href="http://www.nmis.org/gate/">Gate of Heavenly Peace Web siteЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Chen, Pauline.</dd>
 <dd>â€¢149; "Screening History: New Documentaries on the Tiananmen Events in China." <i>Cineaste</i> v22, n1 (Wntr, 1996):18 (5 pages).</dd>
 <dd>â€¢149; Buruma, I. Ѭ href="%3CA%20http://www.lib.berkeley/MRC/Tianamen.html">Full-text of this article / review is available: &gt;Ж</dd>
@@ -858,8 +859,9 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dt><b>Moving the Mountain.</b></dt>
 <dd>Directed by Michael Apted, 1994. Captures the power and passion of the Chinese student demonstrations for democracy in Tiananmen Square, Beijing, China during May 1989. Newsreel footage, dramatic re-enactments and extensive input from the actual student leaders are to paint a portrait of courage, conviction and commitment. 1995. 83 min. <b>DVD 499; also on VHS Video/C 4164</b></dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; <i>New York Review of Books</i> v42, n20 (Dec 21, 1995):4 (4 pages).</dd>
 <dd>â€¢149; <i>Beijing Review</i> v35, n1 (Jan 6, 1992):36 (2 pages).</dd>
 </dl>
