--- a/03_jQuery-Test/CarneyFilms.html
+++ b/03_jQuery-Test/CarneyFilms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head><title>THE BEAT MOVEMENT ON FILM</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
