--- a/03_jQuery-Test/FSM.html
+++ b/03_jQuery-Test/FSM.html
@@ -1,37 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head><title>The Free Speech Movement: Media Resources, University of California Berkeley</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><style type="text/css">
-A:link {text-decoration: none}
-A:visited {text-decoration: none}
-A:active {text-decoration: none}
-A:hover {text-decoration: underline; color: red;}
-</style>
+
 <link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
-<!--   METADATA using the Dublin Core  -->
-Ж
-
-<h3>The Free Speech Movement</h3><dl>
-<dd>â€¢149; Sound Recordings: See separate listings for:
+<h1>The Free Speech Movement</h1>
 <dl>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/FSM/pacificafsm.html">UC Berkeley Social Activism Sound Recording ProjectЖ</dd>
-</dl>
-</dd>
-</dl>
-<dl>
-<dt><dd data-sortby="9">See also the following MRC Videographies:</dd></dt>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/50svid.html">The 1950'sЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/SixtiesVid.html">The 1960'sЖ</dd>
-</dl>
-<dl>
-<dt><dd data-sortby="9">Related web sites:</dd></dt>
-<dd>â€¢149; Ѭ href="http://www.fsm-a.org/">Free Speech Movement ArchivesЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/BANC/FSM">Bancroft Library Free Speech Movement ProjectЖ</dd>
-<dd>â€¢149;Ѭ href="http://www.calisphere.universityofcalifornia.edu/themed_collections/subtopic6b.html">FSM photosЖ (via Calisphere)</dd>
-</dl><dl>
 <dt><b>Academic Freedom and Berkeley.</b></dt>
 <dd>Presenter William F. Buckley Jr.; guest, Harold Taylor. Harold Taylor, former President of Sarah Lawrence College, and William F. Buckley discuss the effects of the Free Speech Movement and associated radicalisms on breaking down academic discipline at Berkeley and which views, such as racism and Communism, might and which might not, under the tenets of academic freedom, disqualify a scholar from being hired by a university. Originally taped as an episode of the television program Firing Line on January 16, 1967. 50 min. <b>DVD X2669</b></dd>
 </dl>
@@ -162,8 +138,8 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dd>With emphasis on the leadership role of Mario Savio, presents a historical overview of the student Free Speech Movement at the University of California, Berkeley in the early 1960s. Includes archival footage and commentary by archivists and participants in the movement. Produced as an entrant in the History Day Competition, 2009 by students from Francis Parker School. Produced by Hannah Ostrow and Alex Trimm. 10 min. DVD X1758</dd>
 </dl>
 <dl>
-<dt><b>Making Sense of the Sixties</b>. 6 parts, 58 min. each. <b>Video/C 1953</b></dt>
-<dd>â€¢149; Part 1, <b>Seeds of the Sixties</b> Focuses on one of the most important seeds of rebellion: institutionalized prejudice that kept American blacks in subservience and poverty, preventing their children from receiving the education that could help them gain equality. It also shows how television brought home this fact to Northern whites.</dd>
+<dt><b>Making Sense of the Sixties</b>. 6 parts, 58 min. each. </dt>
+<dd>â€¢149; Part 1, <b>Seeds of the Sixties</b> Focuses on one of the most important seeds of rebellion: institutionalized prejudice that kept American blacks in subservience and poverty, preventing their children from receiving the education that could help them gain equality. It also shows how television brought home this fact to Northern whites.<b>Video/C 1953</b></dd>
 <dd>â€¢149; Part 2, <b>We Can Change the World.</b> Chronicles the years 1960-1964, when the civil rights movement and John F. Kennedy inspired idealism in college students. The program explores the impact of the Cuban missile crisis, the assasination of John F. Kennedy, and the 1963 March on Washington.</dd>
 <dd>â€¢149; Part 3, <b>Breaking Boundaries,</b> testing limits. Depicts the sixties' youth rebellion and the counterculture, when millions of young people brushed aside every social rule they had learned and substituted tenets of their own. Chronicles the media's role in the development and impact of the youth rebellion and society's response to it.</dd>
 </dl>
@@ -179,16 +155,18 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 </dl>
 <dl>
 <dt><b>Mario.</b></dt>
-<dd>Newsreel clips of Mario Savio addressing student demonstrators during the Free Speech Movement at the University of California in 1964, followed by brief interviews with Mario in 1994 and 1995. Shown in connection with the opening of the Free Speech Movement Cafe, Moffitt Library, University of California, Berkeley on February 3, 2000. 7 min. Video/C 6837</dd>
+<dd>Newsreel clips of Mario Savio addressing student demonstrators during the Free Speech Movement at the University of California in 1964, followed by brief interviews with Mario in 1994 and 1995. Shown in connection with the opening of the Free Speech Movement Cafe, Moffitt Library, University of California, Berkeley on February 3, 2000. 7 min. DVD X8782</dd>
+</dl>
+
+<dl>
+<dt>Molly Ivins</dt>
+  <dd>October 7, 2004<br>
+  â€¢149; Ѭ href="http://webcast.berkeley.edu/event_details.php?webcastid=10035">View it with RealPlayerЖ DVD 9999</dd>
 </dl>
 <dl>
-<dt><b>Mario Savio Memorial Lectures</b></dt>
-</dl>
-<dl>
-<dd>â€¢149; <b>Molly Ivins</b>: October 7, 2004<br>
-â€¢149; Ѭ href="http://webcast.berkeley.edu/event_details.php?webcastid=10035">View it with RealPlayerЖ</dd>
-<dd>â€¢149; <b>Christopher Hitchens & Adam Hochschild:</b>November 22, 2002<br>
-â€¢149; Ѭ href="http://webcast.berkeley.edu/event_details.php?webcastid=9891">View it with RealPlayerЖ</dd>
+<dt>Christopher Hitchens & Adam Hochschild</dt>
+<dd>November 22, 2002<br>
+â€¢149; Ѭ href="http://webcast.berkeley.edu/event_details.php?webcastid=9891">View it with RealPlayerЖ DVD 9999</dd>
 </dl>
 <dl>
 <dt><b>[Savio, Mario] ACLU Sonoma County Chapter Meeting, 2/24/95</b></dt>
