--- a/03_jQuery-Test/GayVid.html
+++ b/03_jQuery-Test/GayVid.html
@@ -3,29 +3,9 @@
 </head>
 <body>
 <div id="dvData">
-Ж
-
-<h3>Gay, Lesbian, Bisexual, Transgender,<br>
-and Intersexual Studies</h3><dl>
-<dt><img align="middle" img="" src="http://www.lib.berkeley.edu/MRC/contents.gif"></dt>
-</dl>
+<h1>Lesbian, Gay, Bisexual, Transgender, and Intersexual Studies</h1>
+<h2>Documentaries and Related Works</h2>
 <dl>
-<dd>â€¢149; Ѭ href="#gaydocu">Misc. GLBT TopicsЖ</dd>
-<dd>â€¢149; Ѭ href="#marriage">GLBT Families and MarriageЖ</dd>
-<dd>â€¢149; Ѭ href="#color">GLBT People of ColorЖ</dd>
-<dd>â€¢149; Ѭ href="#outside">GLBT People Outside the USЖ</dd>
-<dd>â€¢149; Ѭ href="#homophobia">Homophobia/Violence Against GLBT PeopleЖ</dd>
-<dd>â€¢149; Ѭ href="#intersexual">Transexuality, Intersexuality, and Gender MutabilityЖ</dd>
-</dl>
-<dl>
-<dt><dd data-sortby="9">See also:</dd></dt>
-</dl>
-<dl>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/GayVid2.html#gaymovies">Gays/Lesbians in Motion PicturesЖ</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/medhealth.html#disease">Medical Sciences and TechnologyЖ (for works about international AIDS epidemic)</dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/pacificalgbt/pacificalgbt2.html#gaymovies">LGBT HistoryЖ (Berkeley/Pacifica Social Activism Collection)</dd>
-</dl><dl>
-<dt><b>Documentaries and Related Works</b>Ж</dt>
 <dt><b>Absolutely Positive.</b></dt>
 <dd>Men and women who are HIV positive talk about how afraid they are of getting AIDS, how they handle the disease, and how it affects their lives. Directed by Peter Adair. 1991. 87 min. <b>DVD 5436 Video/C 2323</b></dd>
 <dd>â€¢149;<b>Awards</b></dd>
@@ -188,7 +168,7 @@ and Intersexual Studies</h3><dl>
 </dl>
 <dl>
 <dt><b>The Contemporary Lesbian: Beyond Stereotypes</b>(KPFK, 26 Oct. 1971)</dt>
-<dd>Examination of the changing views of lesbianism. Produced by Sheri Tyler. Presented by Women's Theater of Los Angeles. Includes reenactments including a lesbian on the couch, and a live discussion with participants from the Lesbian Feminists. Includes discussion of the belief by many psychologists that homosexuality is sick and perverted and the belief that lesbians are threats. Continues with readings about women meeting each other and sharing good times. (50:00) Musical interlude. Blood Man" reading about a male seducer then more female seduction songs and readings complete the program. Includes poetry by Harriet Francis from "Sappho '71," Elsa Gidlow from "Moods of Eros", Martha Shelley, Robby, Judy Grahn and the Gay Womens Lib, a speech by Sharon Zetchis, and selections from the July 1971 issue of Every Woman." Recorded on April 25, 1974 (This date may be inaccurate). Music by Sister Rosie. Originally broadcast on: KPFK, 26 Oct. 1971 88 min. Pacifica Radio Archives, BC0448</dd>
+<dd>Examination of the changing views of lesbianism. Produced by Sheri Tyler. Presented by Women's Theater of Los Angeles. Includes reenactments including a lesbian on the couch, and a live discussion with participants from the Lesbian Feminists. Includes discussion of the belief by many psychologists that homosexuality is sick and perverted and the belief that lesbians are threats. Continues with readings about women meeting each other and sharing good times. (50:00) Musical interlude. Blood Man" reading about a male seducer then more female seduction songs and readings complete the program. Includes poetry by Harriet Francis from "Sappho '71," Elsa Gidlow from "Moods of Eros", Martha Shelley, Robby, Judy Grahn and the Gay Womens Lib, a speech by Sharon Zetchis, and selections from the July 1971 issue of Every Woman." Recorded on April 25, 1974 (This date may be inaccurate). Music by Sister Rosie. Originally broadcast on: KPFK, 26 Oct. 1971 88 min. Pacifica Radio Archives, BC0448 Sound/C 9999</dd>
 <dd>Ѭ href="http://digitalassets.lib.berkeley.edu/pra/ucb/ram/BC0448.ram">Listen to itЖ</dd>
 </dl>
 <dl>
@@ -482,12 +462,12 @@ and Intersexual Studies</h3><dl>
 </dl>
 <dl>
 <dt><b>The Lesbian Underground: On Being a Lesbian Before the Women's Liberation Movement</b>(KPFA, Dec. 1978)</dt>
-<dd>Sabrina Sojourner hosts a discussion on the lesbian underground, or what it was like to be a lesbian before the feminist and gay liberation movement. Guests include Del Martin, author and Commissioner of the San Francisco Commission on the Status of Women, Phyllis Lyon, Commissioner for the Human Rights Commission in San Francisco, and Pat Bond, comedian. Produced by Karla Tonella. Originally broadcast on: KPFA, Dec. 1978. 60 min. Pacifica Radio Archives, AZ0294</dd>
+<dd>Sabrina Sojourner hosts a discussion on the lesbian underground, or what it was like to be a lesbian before the feminist and gay liberation movement. Guests include Del Martin, author and Commissioner of the San Francisco Commission on the Status of Women, Phyllis Lyon, Commissioner for the Human Rights Commission in San Francisco, and Pat Bond, comedian. Produced by Karla Tonella. Originally broadcast on: KPFA, Dec. 1978. 60 min. Pacifica Radio Archives, AZ0294 Sound/C 9999</dd>
 <dd>Ѭ href="http://digitalassets.lib.berkeley.edu/pra/ucb/ram/BB1419.ram">Listen to itЖ</dd>
 </dl>
 <dl>
 <dt><b>The Lesbians</b>(WBAI, Dec. 10 1963)</dt>
-<dd>Nine lesbians discuss their lives and experiences. Interviewed by Charles Hayden. Originally broadcast on: WBAI, Dec. 10 1963. 49 min. Pacifica Radio Archives, BB3264</dd>
+<dd>Nine lesbians discuss their lives and experiences. Interviewed by Charles Hayden. Originally broadcast on: WBAI, Dec. 10 1963. 49 min. Pacifica Radio Archives, BB3264 Sound/C 9999</dd>
 <dd>Ѭ href="http://digitalassets.lib.berkeley.edu/pra/ucb/ram/BB3264.ram">Listen to itЖ</dd>
 </dl>
 <dl>
@@ -695,9 +675,6 @@ and Intersexual Studies</h3><dl>
 <dd>Contents: pt. 1. Out Rage '69 / produced, directed, and written by Arthur Dong -- pt. 2. Culture Wars / produced, directed, and edited by Tina DiFeliciantonio & Jane C. Wagner -- pt. 3. Hollow Liberty / directed by Robyn Hutt; produced by Robyn Hutt & Bennett Singer -- pt. 4. Generation "Q" / produced & directed by Robert Byrd. Using a mix of rarely seen archival footage, live action sequences, and personal interviews, this film series presents a comprehensive view of the gay liberation movement in the United States. Based on the book "Question of Equality" ( UCB Law Lib KF4754.5 .Q47 1995; UCB Main HQ76.8.U5 Q47 1995; UCB Moffitt HQ76.8.U5 Q47 1995) 4 videocassettes (ca. 55 min. each) <b>Video/C 4365</b></dd>
 </dl>
 <dl>
-<dd><img src="http://www.lib.berkeley.edu/MRC/bvid.gif"></dd>
-<dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/QofE.MOV">Video clip from Question of EqualityЖ (via ITVS)</dd>
-</dl><dl>
 <dt><b>Radical Harmonies</b></dt>
 <dd>"Woodstock Meets Women's Liberation in a film about a movement that explodes the gender barriers in music." A documentary on the history of the women's music movement. With festival and concert footage, interviews & archival material, the film delves into the rich history of women creating a cultural life based in a commitment to diversity, feminism and women loving women. Features foremothers of women's music (Cris, Holly, Margie, Meg and more) and today's "new women's music" artists Ani Difranco, Melissa Ferrick, Bitch and Animal and more. c2002. 88 min. <b>DVD 2371</b></dd>
 </dl>
@@ -720,10 +697,7 @@ and Intersexual Studies</h3><dl>
 <dl>
 <dt><b>Rock Hudson's Home Movies.</b></dt>
 <dd>Using clips from Rock Hudson's films and employing a narrative commentary from beyond the grave, the filmmaker invents an eclectic form of biography in which he explores the illusory nature of Hudson's screen image and society's attitudes towards Hudson as a homosexual. A film by Mark Rappaport. 1994. 63 min. <b>DVD X2936 Video/C 3458</b></dd></dl>
-<dl>
-<dt><b>Roy Cohn/Jack Smith.</b></dt>
-<dd>See Ѭ href="#marshmallow">What's Underground About Marshmallows?Ж</dd>
-</dl>
+
 <dl>
 <dt><b>Running Gay.</b></dt>
 <dd>Interviews with gay and lesbian athletes participating in the 1990 Gay Games III in Vancouver, Canada. 1991. 21 min. <b>Video/C 5610</b></dd>
@@ -903,10 +877,7 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dt><b>Tom's Flesh.</b></dt>
 <dd>An experimental documentary film informed by the intersection of the gay male body aesthetic and childhood abuse circa 1960s. Incorporating dark, distant memories, and recent invasive procedures, the film draws on the personal experience of one of its makers: growing up fat, loosing huge amounts of weight, being bulimic and anorexic, having plastic surgery, these all reflect the outward signs of Tom's relationship to his flesh, his internal self-perception and external self imaging. 1994. 9 min. <b>Video/C 4922</b></dd>
 </dl>
-<dl>
-<dt><b>The Transformation</b></dt>
-<dd>SEE: Ѭ href="#SaltMines">The Salt Mines & The TransformationЖ</dd>
-</dl>
+
 <dl>
 <dt><b>Transgeneration</b></dt>
 <dd>This eight part television series follows four American college students over the period of a year as they prepare for gender reassignment. Faced with life-altering choices such as whether or not to take hormone therapy or undergo sex reassignment surgery, these four individuals discuss their lives, their hopes and setbacks, as they deal with varying reactions from family, friends and society. Directed by Jeremy Simmons. c2005 ca. 300 min. <b>DVD 6600</b></dd>
@@ -996,7 +967,8 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dl>
 <dd data-sortby="9">Reviews and articles:</dd>
 <dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/WomenLikeUs.html"><i>ABC-CLIO Video Rating Guide for Libraries</i>Ж</dd>
-</dl><h3>GLBT Families and Marriage</h3>
+</dl>
+<h2>LGBTQA Families and Marriage</h2>
 <dl>
 <dt><b>Anyone and Everyone</b></dt>
 <dd>Connected by having a son or daughter who is gay, parents across the country discuss their experiences. Individuals from such diverse origins as Japanese, Bolivian, and Cherokee; as well as religions such as Mormon, Catholic, Hindus and others share intimate accounts of how their children revealed that they're homosexual and discuss their responses. The parents also talk about struggling with the pain their sons and daughters have dealt with, such as not being accepted by relatives and/or friends and being ostracized by religious congregations. Directed by Susan Polis Schutz. c2007. 57 min. <b>DVD X4056</b></dd>
@@ -1108,7 +1080,8 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dl>
 <dt><b>We Are Family.</b></dt>
 <dd>Takes a look at what life is really like in homosexual families, with the focus on parenting and the well being of the children. 1987. 57 min. <b>Video/C 3310</b></dd>
-</dl><h3>Homophobia / Violence Against GLBT People</h3>
+</dl>
+<h2>Homophobia / Violence Against LGBTQA People</h2>
 <dl>
 <dt><b>Beyond Hatred (Au dela de la haine)</b></dt>
 <dd>Examines the events behind the violent death in Rheims, France of Francois Chenu, a young gay man who was murdered by 3 homophobic skinheads in 2002. The film follows the lengthy trial of the accused killers, and offers a moving firsthand account of the complex emotional response of the victim's family. In so doing, it explores the social and psychological roots of homophobia and similar hate crimes as well as demonstrating the emotional maturity that enables the rare human quality of forgiveness. Director, Olivier Meyrou. 2006. 86 min. <b>DVD 8647</b></dd>
@@ -1240,7 +1213,7 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dt><b>Training Rules: No Drinking, No Drugs, No Lesbians</b></dt>
 <dd>A look at how homophobia among women's college sports destroyed the dreams and careers of some of the country's top athletes. Follows Penn State women's basketball champ Jennifer Harris as she takes on the institutionalized homophobia of coach Rene Portland. Bonus features: Interviews with college and pro athletes from a range of sports, theatrical trailer, NCLR featurette. Directed by Dee Mosbacher & Fawn Yacker. 2009. 60 min. <b>DVD X3593</b> Ж</dd>
 </dl>
-<h3>GLBT People of Color</h3>
+<h2>LGBTQA People of Color</h2>
 <dl>
 <dt><b>The Aggressives</b></dt>
 <dd>Features intimate interviews with 6 transgendered lesbians (5 African American, 1 Asian) living in New York City who define themselves as "aggressives." They exhibit masculine appearances and behaviors, but do not aspire to be men. Shows their daily lives and their participation in the underground lesbian "ball" scene, where cross-dressers compete for trophies. Directed and produced by Daniel Peddle. 2005. 73 min. <b>DVD X6805</b></dd>
@@ -1264,8 +1237,8 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dd>â€¢149;ALA Video Round Table Notable Video for Adults</dd>
 <dd>â€¢149;San Francisco International Lesbian & Gay Film Festival - Audience Award, Best Documentary</dd>
 </dl>
-<br>
-<dd data-sortby="9">Related web sites:</dd><dl>
+<dl>
+<dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://newsreel.org/nav/title.asp?tc=CN0148">Description from California Newsreel catalogЖ</dd>
 <dd>â€¢149; Ѭ href="http://www.rustin.org/">Information from the Bayard Rustin Film ProjectЖ</dd>
 </dl>
@@ -1532,7 +1505,8 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dl>
 <dt><b>We Got Moves You Ain't Even Heard Of (Part One)</b></dt>
 <dd>Directed by Erica Cho and Clover Paek. Cast: Clover Paek, Ji Sung Kim, Audrey Luke, Lynne Chan. Obsessed with 80's teen heartthrob Ralph Macchio (aka The Karate Kid), a gay Young Korean American takes a journey into Macchio's pin-up androgyny and Hollywood's all-American underdog fantasies. An experimental film commenting on sexual identity, butch/femme rolls, and Hollywood's orientalism. 1999. 11 min. <b>Video/C MM1017</b></dd>
-</dl><h3>GLBT People Outside the US</h3>
+</dl>
+<h2>LGBTQA People Outside the US</h2>
 <dl>
 <dt><b>Banlieue Gay</b></dt>
 <dd>Emir, Mikael, Brahim and Julia discuss the challenges and vexations experienced by gays and lesbians living in Paris. In French without English subtitles. 2005. 54 min. <b>DVD X2289</b></dd>
@@ -1648,7 +1622,8 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dd>â€¢149;Crapo, Richley. "Woubi Cheri." <i>American Anthropologist</i>. Mar 2000. Vol. 102, Iss. 1; p. 154 (2 pages) Ѭ href="http://proquest.umi.com/pqdweb?did=52580030&sid=15&Fmt=4&clientId=1566&RQT=309&VName=PQD">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Migraine-george, Thâ€¢233;râ€¢232;se. "Beyond the 'internalist' vs. 'externalist' debate: the local-global identities of African homosexuals in two films, Woubi Châ€¢233;ri and Dakan." <i>Journal of African Cultural Studies</i>, Jun2003, Vol. 16 Issue 1, p45-56, 12 p. Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=12021304&site=ehost-live">Full-text of this article / review is available:UC users onlyЖ</dd>
 <dd>â€¢149;Petty, Sheila. "Insight into a gay African world." <i>Visual Anthropology</i>; 2000, Vol. 13 Issue 4, p431-432, 2p</dd>
-</dl><h3>Transexuality, Intersexuality, and Gender Mutability</h3>
+</dl>
+<h2>Transexuality, Intersexuality, and Gender Mutability</h2>
 <dl>
 <dt><b>100% Woman.</b></dt>
 <dd>A post-operative transsexual, Michelle Dumaresq, has provoked outrage by entering the sport of women's mountain bike racing. The program explores complex issues of gender identity surrounding the controversy and manifested in Dumaresq's personal and professional relationships. Includes commentary from her parents and interviews with Michelle, friends, and rival cyclists. Director, Karen Duthie. 2004. 60 min. <b>DVD 4487</b></dd>
@@ -1868,12 +1843,7 @@ Presents films from Stuart Gaffney who produces short works on AIDS, queer and E
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.berkeleymedia.com/catalog/berkeleymedia/films/womens_studies_gender_studies/gay_lesbian_transgender_issues/xxxy">Description from Berkeley Media LLC catalogЖ</dd>
-</dl>Ѭ href="http://www.lib.berkeley.edu/MRC/GayVid2.html"><img src="http://www.lib.berkeley.edu/MRC/nextpage.gif" border="0">&nbsp;Movies, TV, and MiscellaneousЖ
-
-<dl>
-<dt>Ѭ href="http://www.lib.berkeley.edu/MRC/level2.html">Ж</dt>
 </dl>
-
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="../conversion.js"></script>
