--- a/03_jQuery-Test/LaborVid.html
+++ b/03_jQuery-Test/LaborVid.html
@@ -257,8 +257,9 @@
 <dd>â€¢149;<b>Awards</b></dd>
 <dd>â€¢149;American Library Association Video Round Table: Notable Videos for Adults</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Dawes, Gil. "The Farmer's Wife." (Review) <i>Sojourners</i> v27, n5 (Sept-Oct, 1998):74 (2 pages).</dd>
 <dd>â€¢149;Goodman, Walter. "Frontline: The Farmer's Wife." (television program reviews) <i>New York Times</i> v147 (Mon, Sep 21, 1998):B5(N), E5(L), col 1, 14 col in.</dd>
 <dd>â€¢149;Leonard, John. "The Farmer's Wife." (television program reviews) <i>New York</i> v31, n36 (Sept 21, 1998):71.</dd>
@@ -506,8 +507,9 @@
 <dt><b>Life and Times of Rosie the Riveter.</b></dt>
 <dd>Five women reminisce about their jobs and working conditions during World War II. Includes topics of sex discrimination, the women's movement, and the role of movies and radio in helping mold public opinion during World War II. A film by Connie Field. Dist. Ѭ href="http://www.clarityfilms.org/rosie/index.html">Clarity FilmsЖ. c1987. 65 min. <b>DVD X1308; Video/C 1927</b></dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Frank, Miriam. <b>The life and times of Rosie the Riveter : the story of three million working women during World War II.</b> Emeryville, Calif. : Clarity Educational Productions, 1982. (MAIN: D810.W7 F74; Storage Info: C 2 940 936 MORR: D810.W7 F74; MOFF: D810.W7 F74)</dd>
 <dd>â€¢149;Kessler-Harris, Alice. "Rosie the Riveter--Who Was She?" Labor History, Spring83, Vol. 24 Issue 2, p249, 5p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=4555935&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Milkman, Ruth. "Life and Times of Rosie the Riveter." <i>Labor Studies Journal</i>, Fall83, Vol. 8 Issue 2, p162, 2p; Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=6121461&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
@@ -876,8 +878,9 @@
 <dt><b>The Uprising of '34</b></dt>
 <dd>This films tells the story of the General Strike of 1934, a massive but little-known strike by hundreds of thousands of southern textile workers. After three weeks the strike was stopped, the strikers denied jobs. Sixty years later this strike is virtually unknown, and union representation in the South still suspect. Produced and directed by George Stoney and Judith Helfand. 1995. 87 min. <b>Video/C 7453</b></dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Abrash, Barbara; Whiteman, David. "The Uprising of '34: Filmmaking as Community Engagement." <i>Wide Angle</i> 21.2, March 1999 Ѭ href="http://muse.jhu.edu/journals/wide_angle/v021/21.2whiteman.pdf">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Gaines, Jane. "Radical Attractions: The Uprising of '34" <i>Wide Angle</i> - Volume 21, Number 2, March 1999, pp. 101-119 Ѭ href="http://muse.jhu.edu/journals/wide_angle/v021/21.2gaines.pdf">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Rosenzweig, Roy. "The Uprising of '34." <i>Labor History</i>; Fall96, Vol. 37 Issue 4, p535-536, Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=bth&AN=9707181281&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
@@ -996,8 +999,9 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149; Ferriss, Susan and Ricardo Sandoval. <i>The Fight in the Fields: Cesar Chavez and the Farmworkers Movement.</i> New York: Harcourt Brace, c1997; Main (Gardner) Stacks; UCB Moffitt HD6509.C48 F47 1997</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Gallegos, Aaron. "The Fight in the Fields: Cesar Chavez and the Farm Workers' Struggle." (television program reviews) <i>Sojourners</i> v26, n3 (May-June, 1997):59 (3 pages).</dd>
 <dd>â€¢149;Goodman, Walter. "The Fight in the Fields: Cesar Chavez and the Farm Workers' Struggle." (television program reviews) <i>New York Times</i> v146 (Wed, April 16, 1997):B6(N), C18(L), col 5, 2 col in</dd>
 <dd>â€¢149;Harvey, Dennis. "The Fight in the Fields: Cesar Chavez and the Farm Workers' Struggle." (movie reviews) <i>Variety</i> v365, n12 (Jan 27, 1997):79 (2 pages).</dd>
@@ -1120,8 +1124,9 @@ UC Berkeley users only - Requires Ѭ href="http://www.microsoft.com/windows/wind
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://www.newsreel.org/nav/title.asp?tc=CN0192">Description from California Newsreel catalogЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Balachandran Orihuela, Sharada; Hageman, Andrew Carl. "The Virtual Realities of US/Mexico Border Ecologies in Maquilapolis and Sleep Dealer." <i>Environmental Communication</i>, Jun2011, Vol. 5 Issue 2, p166-186, 21p Ѭ href="http://www.tandfonline.com/doi/pdf/10.1080/17524032.2011.565063">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Fregoso, Rosa-Linda. "Maquilapolis: An Interview with Vicky Funari and Sergio de la Torre." <i>Camera Obscura</i> 25(2 74): 173-181 (2010) Ѭ href="http://cameraobscura.dukejournals.org/cgi/reprint/25/2_74/173">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Sorrensen, Cynthia. "Maquilapolis/Bolivia." <i>Journal of Latin American Geography</i>, 2009, Vol. 8 Issue 2, p225-229, 5p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=44726709&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
