--- a/03_jQuery-Test/LatinAmVid.html
+++ b/03_jQuery-Test/LatinAmVid.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Latin America, Mexico, and the Caribbean: Videotapes in the Media Resources Center, UC Berkeley</title>
 <!-- METADATA using the Dublin Core  -->
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core">
+
 <link href="http://www.lesblank.com/">
 <link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
@@ -2001,7 +2001,7 @@ Four documentaries exploring different aspects of the history of visual represen
 </dl>
 <dl>
 <dt><b>Miami-Havana</b></dt>
-<dd>This video discusses how the relationship between the United States and Cuba has affected Cuban families separated by the political conflict. It includes interviews of children from Cuban families and senior citizens. c1992. 52 min. <b>Video/C 3392</b></dd>
+<dd>This Video/Dusses how the relationship between the United States and Cuba has affected Cuban families separated by the political conflict. It includes interviews of children from Cuban families and senior citizens. c1992. 52 min. <b>Video/C 3392</b></dd>
 </dl>
 <dl>
 <dt><b>Mirror Dance (La danza del espejo)</b></dt>
