--- a/03_jQuery-Test/LatinoVid.html
+++ b/03_jQuery-Test/LatinoVid.html
@@ -265,7 +265,7 @@
 </dl>
 <dl>
 <dt><b>Miami-Havana</b></dt>
-<dd>This video discusses how the relationship between the United States and Cuba has affected Cuban families separated by the political conflict. It includes interviews of children from Cuban families and senior citizens. c1992. 52 min. <b>Video/C 3392</b></dd>
+<dd>This Video/Dusses how the relationship between the United States and Cuba has affected Cuban families separated by the political conflict. It includes interviews of children from Cuban families and senior citizens. c1992. 52 min. <b>Video/C 3392</b></dd>
 </dl>
 <dl>
 <dt><b>The Mission.</b> (<i>Neighborhoods: The Hidden Cities of San Francisco</i>)</dt>
