--- a/03_jQuery-Test/MidEastVid.html
+++ b/03_jQuery-Test/MidEastVid.html
@@ -1070,7 +1070,7 @@ Special features: Disc 1: Theatrical and re-release trailers; production gallery
 <h3>Ethiopia/Eritrea</h3>
 Ж<dl>
 <dt><b>The Forbidden Land.</b></dt>
-<dd>Eritreans have been fighting for independence from Ethiopia for over 30 years. This video discusses the struggle for liberation which culminated in a successful coup in May, 1991. 56 min. <b>Video/C 2617</b></dd>
+<dd>Eritreans have been fighting for independence from Ethiopia for over 30 years. This Video/Dusses the struggle for liberation which culminated in a successful coup in May, 1991. 56 min. <b>Video/C 2617</b></dd>
 </dl>
 <dl>
 <dt><b>Sidet: Forced Exile.</b></dt>
