--- a/03_jQuery-Test/ReligionVid.html
+++ b/03_jQuery-Test/ReligionVid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head><title>Religions and Myths of the World: Videotapes in the Media Resources Center, UC Berkeley</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core">
+
 <link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
@@ -1137,8 +1137,9 @@ Episode 9, Into the Future (1945 to the present) <b>DVD 5075;Video/C 701:9 Pt. 9
 <dt><b>The Madonna & Other Miracles.</b></dt>
 <dd>Producer/director/writer, Beth Harrington. After recording an Italian-American religious festival in Boston's North End with her camcorder, Beth Harrington's neighbors tell her they see a miracle on the videotape: a statue of the Virgin Mary its eyes. To her amazement, and in spite of her lapsed religious beliefs, she must admit that her life has been transformed by the event. And when the press gets ahold of the story what ensues is an amusing look at what it means to believe and to belong. Dist.: Ѭ href="http://www.newday.com">New Day FilmsЖ. 1997. 57 min. <b>Video/C 5041</b></dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Martin, James. The Madonna and Other Miracles. (movie reviews) <i>America</i> v176, n21 (June 21, 1997):23.</dd>
 <dd>â€¢149; Garofalo, Denise A. "The Madonna and Other Miracles." (video recording reviews) <i>Library Journal</i> v122, n9 (May 15, 1997):115 (2 pages).</dd>
 <dd>â€¢149;James, Caryn. "The Madonna and Other Miracles." (video recording reviews) <i>New York Times</i> v146 (Mon, May 12, 1997):B2(N), C14(L), col 2, 7 col in.</dd>
@@ -1857,8 +1858,9 @@ Requires Ѭ href="http://www.microsoft.com/windows/windowsmedia/default.mspx">Wi
 <dt><b>Waco: The Rules of Engagement.</b></dt>
 <dd>A documentary film about the tragic series of events that occurred outside Waco, Texas in April 1993 in which 4 federal agents were killed along with 86 men, women and children of the Branch Davidian compound. This critical analysis of federal law enforcement gone tragically wrong, examines the need to reinforce the basic precepts of tolerance and freedom upon which American society is built. 1997. 136 min. <b>Video/C 5339</b></dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Bowman, James. "Waco: the Documentary." <i>American Spectator</i> v30, n8 (August, 1997):68 (2 pages).</dd>
 <dd>â€¢149;Elvin, John. "Waco: The Rules of Engagement." (movie reviews) <i>Insight on the News</i> v14, n9 (March 9, 1998):34.</dd>
 <dd>â€¢149;Holden, Stephen. "WACO: The Rules of Engagement." (movie reviews) <i>New York Times</i> v146 (Fri, June 13, 1997):B13(N), C13(L), col 1, 17 col in.</dd>
