--- a/03_jQuery-Test/Sovietfilm.html
+++ b/03_jQuery-Test/Sovietfilm.html
@@ -149,7 +149,7 @@ Contents:
 </dl>
 <dl>
 <dt><b>Bezhin Meadow</b> (1937)</dt>
-<dd>Directed by Sergei Eisenstein. A tale in which peasant settlements were forcibly reorganized into state affliated collective farms. <b>Video Disc 180</b></dd>
+<dd>Directed by Sergei Eisenstein. A tale in which peasant settlements were forcibly reorganized into state affliated collective farms. <b>Video/D 180</b></dd>
 </dl>
 <dl>
 <dt><b>Brilliantovaya ruka (Diamond Hand)</b> (1968)</dt>
