--- a/03_jQuery-Test/USPolitics.html
+++ b/03_jQuery-Test/USPolitics.html
@@ -499,8 +499,9 @@
 <dl>
 <dt><b>Gerrymandering</b></dt>
 <dd>Takes a hard look at the framework of our democracy and how it provides our politicians a perfectly legal way to control electoral outcomes, posing a threat to democracy as a whole. A Jeff Reichert film. 2010. 79 min. <b>DVD X6073</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Forbes, Steve. "Reenfranchising Voters." <i>Forbes</i>, 11/8/2010, Vol. 186 Issue 8, p13-14, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=55172248&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;"Holden, Stephen. "The Dark Art of Drawing Political Lines." <i>New York Times</i>, 10/15/2010, p18, Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=54409554&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Ruggiero, Mark. "Gerrymandering." <i>Campaigns & Elections</i> (2010), Sep2010, Vol. 31 Issue 295, p42-42 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=54374446&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
@@ -621,8 +622,9 @@
 <dl>
 <dt><b>[Kennedy, John F.] Image of an Assassination: A New Look at the Zapruder Film.</b></dt>
 <dd>A state-of-the-art digital replication of the home movies shot by manufacturer Abraham Zapruder of the assassination of President Kennedy in Dallas on November 22, 1963, which has become one of the most important documents of the 20th century. This documentary chronicles the events leading up to the filming and the painstaking process of digitally duplicating the motion picture sequence undertaken by Zapruder, his business associates, photography experts and employees of the National Archives. The final results are an enhanced film in various sequences...including a version that is 64% wider than has been seen before. 1998. 45 min. <b>DVD X419 Video/C 5504</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Lardner, George, Jr. "Zapruder film set for August video release." (Abraham Zapruder accidently chronicled the assassination of John F. Kennedy) <i>Washington Post</i> v121 (Fri, June 26, 1998):B1, col 1, 42 col in.</dd>
 <dd>â€¢149; Margolick, David. "Owning history: does film of Kennedy assassination belong to all or to one?" (column) <i>New York Times</i> v138 (Fri, Nov 25, 1988):B9(N), B20(L), col 1, 18 col in.</dd>
 <dd>â€¢149; Simon, Art. "Image of an Assassination." (review) <i>Cineaste</i> v24, n1 (Winter, 1998):83 (2 pages).</dd>
