--- a/03_jQuery-Test/biography.html
+++ b/03_jQuery-Test/biography.html
@@ -160,8 +160,9 @@ B
 <dd>â€¢149;International Documentary Association</dd>
 <dd>â€¢149;Venice Film Festival - Cinecritica Award</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Ansen, David. "Bad Boy, Golden Boy." <i>Newsweek</i>. May 29, 1989. Vol. 113, Iss. 22; p. 69</dd>
 <dd>â€¢149;Bouchard, Fred. "That Deceitful, Mysterious Charmer" <i>Down Beat</i>. Chicago: Jan 1990. Vol. 57, Iss. 1; p. 39 (2 pages)</dd>
 <dd>â€¢149;Hoberman, J. "The Cool and the Crazy." <i>The Village Voice</i>. Apr 25, 1989. Vol. 34, Iss. 17; p. 59</dd>
@@ -689,8 +690,9 @@ C
 <dd>â€¢149;Ferriss, Susan and Ricardo Sandoval. <i>The Fight in the Fields: Cesar Chavez and the Farmworkers Movement.</i> New York: Harcourt Brace, c1997 (UCB Bancroft HD6509.C48 F47 1997; UCB Moffitt HD6509.C48.F47 1997)</dd>
 <dd>â€¢149; Chicano!: The History of the Mexican American Civil Rights Movement. Episode 2: The Struggle in the Field. <b>DVD 8780; Video/C 4309</b></dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Gallegos, Aaron. "The Fight in the Fields: Cesar Chavez and the Farm Workers' Struggle."(television program reviews)<i>Sojourners</i> v26, n3 (May-June, 1997):59 (3 pages).</dd>
 <dd>â€¢149; Goodman, Walter."The Fight in the Fields: Cesar Chavez and the Farm Workers' Struggle."(television program reviews) <i>New York Times</i> v146 (Wed, April 16, 1997):B6(N), C18(L), col 5, 2 col in</dd>
 <dd>â€¢149; Harvey, Dennis. "The Fight in the Fields: Cesar Chavez and the Farm Workers' Struggle." (movie reviews) <i>Variety</i> v365, n12 (Jan 27, 1997):79 (2 pages).</dd>
@@ -723,8 +725,9 @@ C
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149; Herman, Edward S. <b>Manufacturing Consent: The Political Economy of the Mass Media</b>. New York: Pantheon Books, 1988. Main Stack P95.82.U6.H471 1988)</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Antush, John C. "Manufacturing Consent: Noam Chomsky and the Media." (movie reviews) <i>Monthly Review</i> v45, n9 (Feb, 1994):47 (6 pages) Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=9404141747&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Bennett, James R. "Manufacturing Consent." <i>Contemporary Sociology</i>, Vol. 18, No. 6 (Nov., 1989), pp. 937-938Ѭ href="http://www.jstor.org/stable/2074220">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149; Darke, Chris. "Manufacturing Consent: Noam Chomsky and the Media." (movie reviews) <i>Sight and Sound</i> v3, n11 (Nov, 1993):45 (2 pages).</dd>
@@ -996,8 +999,9 @@ D
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://newsreel.org/nav/title.asp?tc=CN0103">Description from California Newsreel catalogЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Fitzgerald, Sharon. "W.E.B. Du Bois: A Biography in Four Voices." (television program reviews) <i>American Visions</i> v12, n1 (Feb-March, 1997):34 (2 pages).Ѭ href="http://web.ebscohost.com/ehost/viewarticle?data=dGJyMPPp44rp2%2fdV0%2bnjisfk5Ie46a9KsKyxT66k63nn5Kx95uXxjL6srUutqK5Itpa1Uq6nuEmzls5lpOrweezp33vy3%2b2G59q7RbGus0mwqrVMtpzqeezdu33snOJ6u9e3gKTq33%2b7t8w%2b3%2bS7UbWmski1q7NQr5zkh%2fDj34y73vKF6rzzhOrK45Dy&hid=7">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149; Goodman, Walter. "W.E.B. Du Bois: A Biography in Four Voices." (television program reviews) <i>New York Times</i> v146, n38 (Fri, Feb 7, 1997):B24(N), B17(L), col 3, 13 col</dd>
 <dd>â€¢149; Holloway, Jonathan Scott. "The Soul of W.E.B. Dubois." <i>American Quarterly</i> 1997 49(3): 603-614 Ѭ href="http://muse.jhu.edu/journals/american_quarterly/v049/49.3fr_massiah.html">Full-text of this article / review is available: UC users onlyЖ</dd>
@@ -1051,7 +1055,7 @@ D
 <dd>â€¢149;<b>Awards & Honors</b></dd>
 <dd>â€¢149;Ѭ href="http://www.loc.gov/film/">National Film Registry SelectionЖ</dd>
 </dl>
-<p>Ѭ href="http://www.lib.berkeley.edu/MRC/documentarybib.html#pennebaker"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</p>
+
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.phfilms.com/index.php/phf/film/dont_look_back/">Description from Pennebaker/Hegedus FilmsЖ</dd>
@@ -1066,7 +1070,7 @@ D
 <dd>â€¢149;American Library Association Video Round Table Notable Videos for Adults</dd>
 <dd>â€¢149;Television Critics Association Awards - Outstanding Achievement Movies, Mini-Series and Specials</dd>
 </dl>
-<p>Ѭ href="http://www.lib.berkeley.edu/MRC/martinscorsese.html#dylan"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</p>
+
 <p>Ж</p>
 E
 </dd>
@@ -1386,8 +1390,9 @@ G
 <dl>
 <dt><b>[Garvey, Marcus] Marcus Garvey: Look For Me in the Whirlwind.</b></dt>
 <dd>Uses a wealth of archival film, photographs and documents to uncover the story of Marcus Garvey, a Jamaican immigrant who between 1916 and 1921 built the largest black mass movement in world history. It explores his dramatic successes and failures before his fall into obscurity through interviews with people who witnessed the Garvey movement first hand more than 80 year ago as they communicate the appeal of Garvey's revolutionary ideas to a generation of African Americans. Directed by Stanley Nelson. Special DVD features: Interviews with director Stanley Nelson and editor Lewis Erskine; exclusive footage not included in the program; News articles from the Negro World; Audio recordings of Marcus Garvey speeches; video glossary of key terms from a panel of Garvey experts. 2001. 90 min. <b>DVD X3312; Video/C 7807</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Jacques, Geoffrey. "Marcus Garvey: Look for Me in the Whirlwind." <i>Cineaste</i>, Fall2001, Vol. 26 Issue 4, p76, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=f5h&AN=5437223&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Satter, Beryl. "Marcus Garvey: Look for Me in the Whirlwind." <i>Journal of American History</i>; Dec2001, Vol. 88 Issue 3, p1192-1193, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=hlh&AN=5897501&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 </dl>
@@ -1422,7 +1427,7 @@ G
 <dl>
 <dt><b>[Ginsberg, Allen] The Life & Times of Allen Ginsberg.</b></dt>
 <dd>Depicts Allen Ginsberg, an American poet and social activist in the different decades of his life and activities. Includes interviews with contemporaries of his cultural era. c1993. 82 min. <b>DVD 6808 Video/C 3463</b></dd>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/gaydocbib.html#ginsberg"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж
+<dd data-sortby="9">
 <dl>
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/BeatGen.html">The Beat Generation & Its Circle: Audio and Video Materials in the UC Berkeley LibrariesЖ</dd>
@@ -1594,7 +1599,7 @@ H
 <dl>
 <dt><b>[Hawking, Stephen] A Brief History of Time</b></dt>
 <dd>Family members, friends and fellow scientists talk about the life and work of British physicist Professor Stephen Hawking who at the age of twenty-one was diagnosed with the motor neuron disease A.L.S. (amyotrophic lateral sclerosis), and given two years to live. Professor Hawking explains his theories on black holes, gravitational collapse, origins of the universe and his research which expanded and re-evaluated the science of cosmology. This program with its use of graphics and striking imagery is based on his successful book which made the complex concepts of physics fit ordinary language. Based on the book A brief history of time by Stephen Hawking. Director, Errol Morris. 1991. 80 min. <b>DVD X4121 Video/C 2909</b>
-<p>Ѭ href="http://www.lib.berkeley.edu/MRC/documentarybib.html#briefhistory"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</p>
+
 </dd>
 </dl>
 <dl>
@@ -1799,7 +1804,7 @@ H
 <dd>â€¢149;Berlin International Film Festival - Best Short Film</dd>
 </dl>
 </dd>
-<dd data-sortby="9">Ѭ href="http://www.lib.berkeley.edu/MRC/afamdocbib.html#langston"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж
+<dd data-sortby="9">
 <p>See also: </p>
 <dl>
 <dd>â€¢149; Voices and Visions. (vol. 3) <b>Video/C 1067</b></dd>
@@ -1847,8 +1852,9 @@ I
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149;Ѭ href="http://asianamericanmedia.org/rf_cms/index.php?cmd=showPage&page_id=1.4.1.2.44&section=1.4">Center for Asian American Media catalog descriptionЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Bailey, Beth. "Days of Waiting." (movie reviews)<i>Journal of American History</i> v82, n3 (Dec, 1995):1324 (2 pages).</dd>
 <dd>â€¢149; Herrick, Roxanna. "Days of Waiting." (movie reviews) <i>Library Journal</i> v117, n3 (Feb 15, 1992):205 (2 pages).</dd>
 <dd>â€¢149; Higashi, Suniko. "Days of Waiting." (movie reviews) <i>American Historical Review</i> v98, n4 (Oct, 1993):1181 (4 pages).</dd>
@@ -2294,8 +2300,9 @@ L
 <dd data-sortby="9">Related web sites:</dd>
 <dd>â€¢149; Ѭ href="http://newsreel.org/nav/title.asp?tc=CN0057">Description from California Newsreel catalogЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Clark, Andrew F.. "Lumumba: Death of a Prophet." (movie reviews)<i>American Historical Review</i> v98, n4 (Oct, 1993):1156 (3 pages).</dd>
 <dd>â€¢149; Holden, Stephen. "Lumumba: Death of a Prophet." (movie reviews) <i>New York Times</i> v142 (Wed, Sept 30, 1992):B4(N), C18(L), col 4</dd>
 <dd>â€¢149; "Lumumba: Death of a Prophet." (Video Recording Review) <i>The Journal of Negro History</i> Wntr 2001 v86 i1 p88(2)</dd>
@@ -2560,8 +2567,9 @@ M
 <dl>
 <dt><b>[Monk, Thelonious]Straight No Chaser.</b></dt>
 <dd>Documentary about the life and works of Thelonious Monk. Includes extensive archival footage by Michael and Christian Blackwell, made in 1968, of Monk performing his own compositions in studio, on tour, and behind the scenes. With newly added interviews. 90 min. <b>DVD 5656 Video/C 2974</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; <i>Nation</i> v249, n14 (Oct 30, 1989):505 (4 pages)</dd>
 <dd>â€¢149; <i>Down Beat</i> v57, n2 (Feb, 1990):34 (2 pages)</dd>
 <dd>â€¢149; <i>Rolling Stone</i>, n551 (May 4, 1989):19).</dd>
@@ -3058,8 +3066,9 @@ R
 <dd data-sortby="9">Bibliography on this topic: </dd>
 <dd>â€¢149; Ѭ href="http://www.lib.berkeley.edu/MRC/Germanfilmbib.html#Riefenstahl">Bibliography of books and articles on Riefenstahl in the UCB LibraryЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Clark, Katerina. "The Wonderful, Horrible Life of Leni Riefenstahl." (movie reviews) <b>American Historical Review</b> v100, n4 (Oct, 1995):1227 (2 pages).</dd>
 <dd>â€¢149; Frascella, Lawrence. "The Wonderful, Horrible Life of Leni Riefenstahl." (movie reviews) <b>Advocate</b>, n652 (April 5, 1994):75 (2 pages).</dd>
 <dd>â€¢149; Goldberg, Robert. "The Wonderful, Horrible Life of Leni Riefenstahl." (television program reviews) Wall Street Journal (Mon, July 3, 1995):A6(W), A16(E), col 1, 23 col in.</dd>
@@ -3479,8 +3488,9 @@ S
 <dl>
 <dt><b>[Strummer, Joe] The Future is Unwritten</b></dt>
 <dd>Documentary follows the life of musician and political activist Joe Strummer before, during, and after the Clash. Features interviews with musicians, celebrities, and those whose lives were changed forever by one man's music. Director, Julien Temple. 2007. 124 min. <b>DVD 9917</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Diones, Bruce. "The Future is Unwritten." <i>New Yorker</i>, 11/5/2007, Vol. 83 Issue 34, p20-20 Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=27454975&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Hampton, Howard. "Rock and Roll." (cover story) <i>Film Comment</i>; Nov/Dec2007, Vol. 43 Issue 6, p32-33, 2p Ѭ href="http://search.ebscohost.com/login.aspx?direct=true&db=a9h&AN=27575001&site=ehost-live">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149; Sinker, Mark. "Control Joe Strummer: The Future Is Unwritten This Is England." <i>Film Quarterly</i>, Winter2007/2008, Vol. 61 Issue 2, p22-29, 8p Ѭ href="http://caliber.ucpress.net/doi/pdfplus/10.1525/fq.2007.61.2.22">Full-text of this article / review is available: UC users onlyЖ</dd>
@@ -3706,8 +3716,9 @@ W-Z
 <dl>
 <dt><b>[Warhol, Andy] Andy Warhol: A Documentary Film</b></dt>
 <dd>Andy Warhol and his entourage redefined painting, sculpture, film, music and celebrity at his Factory workspace-playroom. Through on-camera interviews and still and motion picture footage this extensive documentary expores the entire length of Andy Warhol's career in art from the 1940's until his death in 1987. Directed by Ric Burns. Dist.: Ѭ href="http://teacher.shop.pbs.org/">PBS.Ж 2006. 240 min. <b>DVD 6510</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Ebony, David. "From "Raggedy Andy" to "Drella"--Warhol for TV.(FRONT PAGE)(Television program review)." <i>Art in America</i> 94.10 (Nov 2006): 41(2). Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790e941a81a197ed1fcaa7dc13ff2903b75c2b4c365a27b8aa4c2bd47dfe3021cbc6&fmt=P">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Williams, Gilda. "Andy Warhol." <i>Art Monthly</i> no. 302 (December 2006/January 2007) p. 47Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790ebc41f925fefecb18954897fc694871e454c2a53ae831b2827159a02b928c7ace&fmt=P">Full-text of this article / review is available: UC users onlyЖ</dd>
 </dl>
@@ -3865,8 +3876,9 @@ W-Z
 <dl>
 <dt><b>[Wuornos, Aileen] Aileen Wuornos: The Selling of a Serial Killer</b></dt>
 <dd>Co-producer/director, Nick Broomfield. Tells the true story of the first female serial killer in the U.S., Aileen Wuornos, and the opportunists who used her story. They include the born-again Christian woman who adopted Aileen while she was on trial and then sold Aileen's story, the lawyer who convinced Aileen to plead no contest, and Aileen's lesbian lover who got her to confess. 1992. 87 min. <b>Video/C MM229</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149;Doherty, Thomas. "Aileen Wuornos: Superstar." <i>Cineaste: America's Leading Magazine on the Art and Politics of the Cinema</i>, vol. 29, no. 3, pp. 3-5, Summer 2004. Ѭ href="http://vnweb.hwwilsonweb.com/hww/jumpstart.jhtml?recid=0bc05f7a67b1790e941a81a197ed1fca6f305d19631bef13955fc5d4b4e31a6f10b1412a840cdb13&fmt=P">Full-text of this article / review is available: UC users onlyЖ</dd>
 <dd>â€¢149;Greenberg, Harvey Roy. "Roadkill.(Critical Essay)." <i>Psychiatric Times</i> (May 1, 2004): 16.</dd>
 <dd>â€¢149;Karno, Valerie. "Between Victim and Offender: Aileen Wuornos and the Representation of Self-Defense." <i>Critical Matrix: The Princeton Journal of Women, Gender, and Culture</i>, vol. 11, no. 2, pp. 67-86, 1999.</dd>
