--- a/03_jQuery-Test/blacklist.html
+++ b/03_jQuery-Test/blacklist.html
@@ -60,7 +60,7 @@ Screenwriter Lester Cole will go down in cinema history as a member of the origi
 <dd>â€¢149;The Invisible Man Returns (1940) (screenplay)<b>DVD X4282; Video/C 999:1140</b></dd>
 <dd>â€¢149;Sinners in Paradise (1938) (screenplay)</dd>
 <dd>â€¢149;Charlie Chan in London (1934) (additional dialogue) (uncredited) <b>DVD 5743</b></dd>
-<dd>â€¢149;If I Had a Million (1932) (writer) <b>Video Disc 169</b></dd>
+<dd>â€¢149;If I Had a Million (1932) (writer) <b>Video/D 169</b></dd>
 </dl>
 <dl>
 <dt>â€¢149; <b>Edward Dmytryk</b><br>
