--- a/03_jQuery-Test/flappers.html
+++ b/03_jQuery-Test/flappers.html
@@ -69,7 +69,7 @@
 </dl>
 <dl>
 <dt><b>College</b> (1927)</dt>
-<dd>Directed by James W. Horne. Featuring Buster Keaton. Ronald, an idealistic freshman who attends Clayton College finds himself embroiled in a war of athletics as he fights for the heart of his beloved coed, Mary. 66 min. <b>DVD 255; Video Disc 117:3</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0012253">Credits and other information from the Internet Movie DatabaseЖ<dl>
+<dd>Directed by James W. Horne. Featuring Buster Keaton. Ronald, an idealistic freshman who attends Clayton College finds himself embroiled in a war of athletics as he fights for the heart of his beloved coed, Mary. 66 min. <b>DVD 255; Video/D 117:3</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0012253">Credits and other information from the Internet Movie DatabaseЖ<dl>
 <dd data-sortby="9">See also:</dd>
 <dd>â€¢149;Ѭ href="http://www.lib.berkeley.edu/MRC/keaton.html">Buster Keaton bibliographyЖ</dd>
 </dl>
@@ -560,7 +560,7 @@
 </dl>
 <dl>
 <dt><b>Singin' in the Rain</b> (1952)</dt>
-<dd>Directed by Stanley Donen & Gene Kelley. A musical-comedy spoof of the turmoil that afflicted the motion picture industry in the late 1920's during the changeover from silent films to sound. <b>Video disc 163</b> has special features: An audio essay by film historian, Ronald Haver; the original film versions of songs performed in Singin' in the Rain; a behind-the-scenes outtake from the making of the film; and "The Voice from The Screen", an early demonstration of talking movies. 103 min. <b>DVD 3; VHS 999:36</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0045152/">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>Directed by Stanley Donen & Gene Kelley. A musical-comedy spoof of the turmoil that afflicted the motion picture industry in the late 1920's during the changeover from silent films to sound. <b>Video/D 163</b> has special features: An audio essay by film historian, Ronald Haver; the original film versions of songs performed in Singin' in the Rain; a behind-the-scenes outtake from the making of the film; and "The Voice from The Screen", an early demonstration of talking movies. 103 min. <b>DVD 3; VHS 999:36</b><li>â€¢149; Ѭ href="http://us.imdb.com/title/tt0045152/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
 <dt><b>Splendor in the Grass</b> (1961)</dt>
