--- a/03_jQuery-Test/imagesnatives.html
+++ b/03_jQuery-Test/imagesnatives.html
@@ -511,7 +511,7 @@
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?0046183">Credits and other information from the Internet Movie DatabaseЖ</dd></dl>
 <dl>
 <dt><b>Pocahontas</b> (Disney, 1995)</dt>
-<dd>An animated, "sanitized-for-your-protection" musical version of Pocahontas, the young daughter of Chief Powhatan meets up with a shipful of English settlers led by their courageous captain John Smith. Their friendship leads to events that will change history as the native Americans and English settlers learn to live side by side. The laser disc includes behind-the-scenes documentary "The Making of Disney's Pocahontas" plus additional bonus material including early concept art and animation tests, background on the creation and development of characters, storyboards and story reels, abandoned concepts and characters, deleted musical sequences, deleted animation, trailers, publicity and promotions. 193 min. <b>DVD 1417; Video Disc 157</b></dd>
+<dd>An animated, "sanitized-for-your-protection" musical version of Pocahontas, the young daughter of Chief Powhatan meets up with a shipful of English settlers led by their courageous captain John Smith. Their friendship leads to events that will change history as the native Americans and English settlers learn to live side by side. The laser disc includes behind-the-scenes documentary "The Making of Disney's Pocahontas" plus additional bonus material including early concept art and animation tests, background on the creation and development of characters, storyboards and story reels, abandoned concepts and characters, deleted musical sequences, deleted animation, trailers, publicity and promotions. 193 min. <b>DVD 1417; Video/D 157</b></dd>
 <dd>â€¢149; Ѭ href="http://us.imdb.com/Title?Pocahontas+(1995)">Credits and other information from the Internet Movie DatabaseЖ<br>
 </dd>
 </dl>
@@ -645,7 +645,7 @@
 </dl>
 <dl>
 <dt><b>Stagecoach</b> (1939)</dt>
-<dd>Directed by John Ford. Nine passengers board a Cheyenne-bound stagecoach, each with an urgent reason for the journey, each determined to live through the dangerous trip through Indian territory. Geronimo (Chief White Horse), informed by Yakeema, the Indian wife of a Mexican, attacks a stagecoach. 98 min. <b>DVD 98; Video Disc 127; VHS 999:94</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?Stagecoach+(1939)">Credits and other information from the Internet Movie DatabaseЖ
+<dd>Directed by John Ford. Nine passengers board a Cheyenne-bound stagecoach, each with an urgent reason for the journey, each determined to live through the dangerous trip through Indian territory. Geronimo (Chief White Horse), informed by Yakeema, the Indian wife of a Mexican, attacks a stagecoach. 98 min. <b>DVD 98; Video/D 127; VHS 999:94</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?Stagecoach+(1939)">Credits and other information from the Internet Movie DatabaseЖ
 </dd>
 </dl>
 <dl>
@@ -655,7 +655,7 @@
 </dl>
 <dl>
 <dt><b>Sweet Sioux</b> (1937)</dt>
-<dd>Animated short. Directed by Friz Freleng. Typical 1930's Warner Brothers cartoon take on those wacky "injuns." <b>Video Disc 165</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0029624/">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>Animated short. Directed by Friz Freleng. Typical 1930's Warner Brothers cartoon take on those wacky "injuns." <b>Video/D 165</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0029624/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
 <dt><b>Taza, Son of Cochise</b> (1969)</dt>
