--- a/03_jQuery-Test/melodrama.html
+++ b/03_jQuery-Test/melodrama.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head><title>Melodrama and 'Women's Films': Media Resources Center UCB</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
@@ -156,7 +156,7 @@
 </dl>
 <dl>
 <dt><b>Love of Jeanne Ney (Die Liebe der Jeanne Ney)</b> (Germany, 1927)</dt>
-<dd>Directed by G.W. Pabst. Jeanne is the daughter of a French diplomat who is assassinated by Bolsheviks. She falls in love with a young communist, Andreas and has a brief interlude of happiness in Paris until her uncle is murdered and the crime pinned on Andreas. 108 min. <b>DVD 731; Video Disc 149; VHS 999:286</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0018087/">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>Directed by G.W. Pabst. Jeanne is the daughter of a French diplomat who is assassinated by Bolsheviks. She falls in love with a young communist, Andreas and has a brief interlude of happiness in Paris until her uncle is murdered and the crime pinned on Andreas. 108 min. <b>DVD 731; Video/D 149; VHS 999:286</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0018087/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 <dl><dd data-sortby="9">Reviews and articles:</dd><dd>â€¢149; Bathrick, David. "Melodrama, History, and Dickens: The Love of Jeanne Ney (1927)." In: <b>The Films of G. W. Pabst: An Extraterritorial Cinema</b> / edited by Eric Rentschler. pp: 52-61. New Brunswick: Rutgers University Press, c1990.(Main Stack PN1998.3.P34.F5 1990;Moffitt PN1998.3.P34.F5 1990)</dd>
 </dl>
 <dl>
