--- a/03_jQuery-Test/musicmovies.html
+++ b/03_jQuery-Test/musicmovies.html
@@ -632,7 +632,7 @@
 </dl>
 <dl>
 <dt><b>Dixieland Droopy</b>(1954)</dt>
-<dd>Directe by Tex Avery. Animated short. Don't be fooled by the title - Droopy looks like Droopy, but he's actually jazzman John Pettibone, with his performing flea combo, and the film shows how it came into being. <b>Video Disc 152</b></dd>
+<dd>Directe by Tex Avery. Animated short. Don't be fooled by the title - Droopy looks like Droopy, but he's actually jazzman John Pettibone, with his performing flea combo, and the film shows how it came into being. <b>Video/D 152</b></dd>
 </dl>
 <dl>
 <dt><b>Dreamgirls</b> (2006)</dt>
@@ -998,7 +998,7 @@
 </dl>
 <dl>
 <dt><b>Magical Maestro</b>(1952)</dt>
-<dd>Directed by Tex Avery. Animated short. A magician is spurned by an opera singer, and takes a spectacular revenge by replacing the conductor and turning the hapless tenor into one thing after another. And watch out for the hair that gets caught in the projector gate! <b>Video Disc 152</b></dd>
+<dd>Directed by Tex Avery. Animated short. A magician is spurned by an opera singer, and takes a spectacular revenge by replacing the conductor and turning the hapless tenor into one thing after another. And watch out for the hair that gets caught in the projector gate! <b>Video/D 152</b></dd>
 </dl>
 <dl>
 <dt><b>A Night at the Opera</b> (1935)</dt>
