--- a/03_jQuery-Test/screenwriters.html
+++ b/03_jQuery-Test/screenwriters.html
@@ -285,7 +285,7 @@
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0028683/">CamilleЖ (1936) (screenplay) <b>DVD 4281</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0023948/">Dinner at EightЖ (1933) (screenplay) <b>DVD 3637</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0022854/">EmmaЖ (1932) (story) <b>DVD X1800</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0020642/">Anna ChristieЖ (1931) (adaptation) <b>DVD 4279</b></dd>
-<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0021730/">The ChampЖ (1931) (story) <b>Academy Award 1931 Best Writing, Original Story</b><b>DVD 5065</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0020686">The Big HouseЖ (1930) (dialogue) (story) <b>DVD X1795; vhs 999:3357</b> <b>Academy Award 1930 Best Writing, Achievement</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0019585/">The WindЖ (1928) (scenario) <b>Video Disc 64</b></dd>
+<dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0021730/">The ChampЖ (1931) (story) <b>Academy Award 1931 Best Writing, Original Story</b><b>DVD 5065</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0020686">The Big HouseЖ (1930) (dialogue) (story) <b>DVD X1795; vhs 999:3357</b> <b>Academy Award 1930 Best Writing, Achievement</b><li>â€¢149;Ѭ href="http://us.imdb.com/title/tt0019585/">The WindЖ (1928) (scenario) <b>Video/D 64</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0018107/">LoveЖ (1927) (continuity) <b>DVD X1948</b></dd>
 <dd>â€¢149;Ѭ href="http://imdb.com/title/tt0017416/">The Son of the SheikЖ (1926) (adaptation) <b>DVD 1283</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0017029/">KikiЖ (1926) (adapted by) <b>DVD X2921</b></dd>
