--- a/03_jQuery-Test/shorts.html
+++ b/03_jQuery-Test/shorts.html
@@ -192,8 +192,9 @@
 <dl>
 <dt><b>Boys Shorts: Six Short Films</b></dt>
 <dd>Contents: Resonance -- R.S.V.P -- Anthem -- Relax -- Billy Turner's secret -- Dead boys club. Showcases six short films with gay themes produced in the 1990s. <i>Resonance</i>: an exploration of gay-bashing in the back streets of Sydney. <i>RSVP</i>: A powerful portrait of loss punctuated by the haunting voice of Jessye Norman. <i>Anthem</i>: A collage of erotic images that celebrates the lives of African American men. <i>Relax</i>: An elegant film about one man's fears regarding HIV testing. <i>Billy Turner's Secret</i>: An upbeat comedy about a young Black man coming out to his roommate. <i>The Dead boys' club</i>: A steamy tribute to the '70's world of promiscuity and disco balls from the perspective of gay life in the '90's. 1993?. 119 min. <b>Video/C 6226</b>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Evans, Greg. "Boys' Shorts: The New Queer Cinema." (movie reviews) <i>Variety</i> v352, n1 (August 16, 1993):40 (1 page).</dd>
 <dd>â€¢149; Holden, Stephen. "Boys' Shorts: The New Queer Cinema." (movie reviews) <i>New York Times</i> v142 (Wed, July 21, 1993):C17(L), col 1, 12 col in.</dd>
 </dl>
