--- a/03_jQuery-Test/sseasianamvid.html
+++ b/03_jQuery-Test/sseasianamvid.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head><title>Asian, Pacific, & South Asian American Video: Media Resources Center UCB: South/Southeast Asian Americans/Pacific Islanders</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
