--- a/03_jQuery-Test/the20thcentury.html
+++ b/03_jQuery-Test/the20thcentury.html
@@ -330,7 +330,7 @@ Brings the 20th century back to life through narration, rare photographs and stu
 <dd>1988. 42 Videodiscs.</dd>
 <dd>Collection of original film and videotape footage documenting the social, political and cultural history of the 20th century from the CEL (Corporation for Entertainment and Learning) Archive. Contains primary source material recorded by film and television news cameras. Accompanying <b><i>Index</i></b> contains both an alphabetical index and a daily index organized by day of the year. Reference set contains background material on historical units organized numerically by unit. [Printed indexes and shot listings in MRC reference collection] Supplemental material (in binder) contains 1985 annual update.</dd>
 <dd>For some details on content, consult UCB Gladis catalog [type in "f ti video encyclopedia of the 20th century"]</dd>
-<dd><b>Video Disc 6: 1-42</b></dd></dl>
+<dd><b>Video/D 6: 1-42</b></dd></dl>
 <dl>
 <dt><br>
 </dt>
