--- a/03_jQuery-Test/tv.html
+++ b/03_jQuery-Test/tv.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Television Programs</title>
 <!-- METADATA using the Dublin Core -->
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
@@ -2269,7 +2269,7 @@ Experience the television show that made coonskin caps a staple for a generation
 </dl>
 <dl>
 <dt><b>The Disneyland Anthology</b></dt>
-<dd>The Disneyland story (10/27/54) -- A Day in the life of Donald Duck (2/1/56) -- Along the Oregon trail (11/14/56) -- The Crisler story/Prowlers of the Everglades (2/17/57) -- Adventures in fantasy (11/6/57) -- Mars and beyond (12/4/57) Disneyland story: At the Disney Studios, Walt Disney gives a sneak peek of a model of then-under-construction Disneyland Park. Day in the life of Donald Duck: With a little help from Walt Disney, Jimmie Dodd and the Mouseketeers, go behind the scenes for a look at one adventurous day for Donald Duck. Along the Oregon Trail: A dramatization of life as it was 100 years ago with Fess Parker and Sebastian Cabot presenting the action. The Crisler Story/Prowlers of the Everglades: Travel with Herb and Lois Crisler in Alaska as they film the feature White Wilderness and then travel south to visit an alligator swamp. Adventures in fantasy: A journey into animation which reveals how ordinary things can be transformed into "living" characters. Mars and Beyond: Investigates and predicts in 1957 what man might find if he were to land on Mars. 315 min. Video Disc 186</dd>
+<dd>The Disneyland story (10/27/54) -- A Day in the life of Donald Duck (2/1/56) -- Along the Oregon trail (11/14/56) -- The Crisler story/Prowlers of the Everglades (2/17/57) -- Adventures in fantasy (11/6/57) -- Mars and beyond (12/4/57) Disneyland story: At the Disney Studios, Walt Disney gives a sneak peek of a model of then-under-construction Disneyland Park. Day in the life of Donald Duck: With a little help from Walt Disney, Jimmie Dodd and the Mouseketeers, go behind the scenes for a look at one adventurous day for Donald Duck. Along the Oregon Trail: A dramatization of life as it was 100 years ago with Fess Parker and Sebastian Cabot presenting the action. The Crisler Story/Prowlers of the Everglades: Travel with Herb and Lois Crisler in Alaska as they film the feature White Wilderness and then travel south to visit an alligator swamp. Adventures in fantasy: A journey into animation which reveals how ordinary things can be transformed into "living" characters. Mars and Beyond: Investigates and predicts in 1957 what man might find if he were to land on Mars. 315 min. Video/D 186</dd>
 </dl>
 <dl>
 <dt><b>Disneyland USA</b></dt>
