--- a/03_jQuery-Test/EnvidesignVid.html
+++ b/03_jQuery-Test/EnvidesignVid.html
@@ -2382,7 +2382,7 @@ Coverage of a conference by and for city managers designed to assist them with s
 </dl>
 <dl>
 <dt><b>Mega-cities: Urban Leadership for the 21st Century</b></dt>
-<dd>Discusses cities that by the twenty-first century will have populations greater than ten million and whether these mega-cities can provide basic human needs for so many people of so many diverse cultures. This video discusses the Los Angeles Mega-Cities Project and provides an overview of an array of innovative projects and leaders currently working in the Los Angeles Metropolitan area. 199-? 29 min. <b>Video/C 8439</b></dd>
+<dd>Discusses cities that by the twenty-first century will have populations greater than ten million and whether these mega-cities can provide basic human needs for so many people of so many diverse cultures. This Video/Dusses the Los Angeles Mega-Cities Project and provides an overview of an array of innovative projects and leaders currently working in the Los Angeles Metropolitan area. 199-? 29 min. <b>Video/C 8439</b></dd>
 </dl>
 <dl>
 <dt><b>Megamall: A Story of Money, Power, Politics, and the American Landscape</b></dt>
