--- a/03_jQuery-Test/academyawards.html
+++ b/03_jQuery-Test/academyawards.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Film and Video Awards: Academy Awards</title>
 <!-- METADATA using the Dublin Core 20151104 -->
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
