--- a/03_jQuery-Test/berkeleyvideos.html
+++ b/03_jQuery-Test/berkeleyvideos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head><title>UC Berkeley: Lectures, Events, History: Videotapes and Audiotapes in the Media Resources Center, UCB</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
