--- a/03_jQuery-Test/commercials.html
+++ b/03_jQuery-Test/commercials.html
@@ -2,7 +2,7 @@
 <html>
 <head><title>Commercials and Advertisements</title>
 <!-- METADATA using the Dublin Core -->
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
