--- a/03_jQuery-Test/frenchculture.html
+++ b/03_jQuery-Test/frenchculture.html
@@ -332,7 +332,7 @@
 <dd>Directed by Peter Watkins. La Commune was the name given to the revolutionary government established by the people of Paris in 1871. This presents an in-depth account of the major characters of the Commune of 1871 whose members followed either Louis August Blanqui or the philosopher Pierre Joseph Proudhon. The film travels back to 1871 and is not only a lesson in history but presents a demonstration of how history is shaped, and re-shaped, by the tellers of the tale. In this particular case activities of the Commune are broadcast by a journalist for Versailles Television who presents the official view while a Commune television station is set up to present the perspectives of the Paris rebels. 345 min. <b>DVD X5780; Video/C 9477</b></dd>
 <dd>â€¢149;Ѭ href="http://www.imdb.com/title/tt0257497/">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<p>Ѭ href="http://www.lib.berkeley.edu/MRC/ukbib.html#commune"><img src="http://www.lib.berkeley.edu/MRC/sepbib.gif" border="0">Ж</p>
+
 <dl>
 <dt><b>Daguerr&eacute;otypes</b></dt>
 <dd>Portraits of the shopkeepers along the Rue Daguerre, an average street in Paris, provide an informal investigation into French culture and society. After studying the different stores and what they sell, and interviewing the owners about their childhoods and marriages, the film concludes with a series of static "daguerreotypes," in the style of pioneer photographer Louis Daguerre. Written and directed by Agn&egrave;s Varda. 1975. 80 min. <b>DVD X6357</b></dd>
@@ -402,7 +402,7 @@
 </dl>
 <dl>
 <dt><b>Images de la Revolution Francaise</b> (1990)</dt>
-<dd>Contains images of the events of the French Revolution from the collections of Bibliotheque Nationale. Includes the revolution as themes in art and culture, archives and documents, commemorations and celebrations, 19th century polemeics, and a discussion of France at the end of the 18th century. Accompanying booklet issued in tete-beche format with separate title page for French and English. <b>Video Disc 27</b></dd>
+<dd>Contains images of the events of the French Revolution from the collections of Bibliotheque Nationale. Includes the revolution as themes in art and culture, archives and documents, commemorations and celebrations, 19th century polemeics, and a discussion of France at the end of the 18th century. Accompanying booklet issued in tete-beche format with separate title page for French and English. <b>Video/D 27</b></dd>
 </dl>
 <dl>
 <dt><b>In the Land of the Deaf</b> (1994)</dt>
@@ -1245,8 +1245,9 @@ Alphabetical by name of author
 <dt><b>20,000 Leagues Under the Sea</b> (1954)</dt>
 <dd>Directed by Richard Fleischer. Cast: Kirk Douglas, James Mason, Paul Lukas, Peter Lorre, Robert J. Wilke, Ted de Corsia, J.M. Kerrigan. A trouble-shooting 19th century seaman is trying to discover why so many whaling ships have been disappearing of late. Teaming with a scientist and a diver, they set sail to investigate and are promptly captured by the megalomaniac Captain Nemo, who skippers a lavish, scientifically advanced submarine. 127 min. <b>DVD 1698</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?0046672">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
-<p>Reviews and articles: </p>
 <dl>
+<dd data-sortby="9">Reviews and articles:</dd>
+
 <dd>â€¢149; Maertens, James W. "Between Jules Verne and Walt Disney: Brains, Brawn, and Masculine Desire in 20,000 Leagues under the Sea." <i>Science-Fiction Studies.</i> 22(2):209-25. 1995</dd>
 </dl>
 <dl>
