--- a/03_jQuery-Test/imagesjews.html
+++ b/03_jQuery-Test/imagesjews.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head><title>The Movies and Ethnic Representation: Jews: Videotapes in the Media Resources Center, UC Berkeley</title>
-<link rel="SCHEMA.dc" href="http://purl.org/metadata/dublin_core"><link rel="stylesheet" type="text/css" href="../conversion.css">
+<link rel="stylesheet" type="text/css" href="../conversion.css">
 </head>
 <body>
 <div id="dvData">
@@ -653,7 +653,7 @@
 </dl>
 <dl>
 <dt><b>The Producers</b> (1968)</dt>
-<dd>Directed by Mel Brooks. Down-on-his-luck theatrical producer Max Biyalistok is forced to romance rich old ladies to finance his efforts. When timid accountant Leo Bloom reviews Max's books, the two hit upon a way to make a fortune by producing a sure-fire flop. The play which is to be their gold mine? "Springtime for Hitler." [Internet Movie Database] 89 min. <b>DVD 1913; Video Disc 178; vhs 999:3221</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?Producers,+The+(1968)">Credits and other information from the Internet Movie DatabaseЖ</dd>
+<dd>Directed by Mel Brooks. Down-on-his-luck theatrical producer Max Biyalistok is forced to romance rich old ladies to finance his efforts. When timid accountant Leo Bloom reviews Max's books, the two hit upon a way to make a fortune by producing a sure-fire flop. The play which is to be their gold mine? "Springtime for Hitler." [Internet Movie Database] 89 min. <b>DVD 1913; Video/D 178; vhs 999:3221</b><li>â€¢149;Ѭ href="http://us.imdb.com/title?Producers,+The+(1968)">Credits and other information from the Internet Movie DatabaseЖ</dd>
 </dl>
 <dl>
 <dt><b>The Reader</b> (USA / Germany, 2008)</dt>
